force-app/main/default/objects/InitiativeSeat__c/InitiativeSeat__c.object-meta.xml
<CustomObject>
    <label>Initiative Seat</label>
    <nameField>
        <displayFormat>IS-{00000}</displayFormat>
        <label>InitiativeSeat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Initiative Seats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>