force-app/main/default/objects/InitiativeSeat__c/fields/ContactInitiativeHistory__c.field-meta.xml
<CustomField>
    <fullName>ContactInitiativeHistory__c</fullName>
    <label>Contact Initiative History</label>
    <referenceTo>ContactInitiativeHistory__c</referenceTo>
    <relationshipLabel>ContactInitiativeHistory</relationshipLabel>
    <relationshipName>Initiative_Seats</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>