force-app/main/default/objects/InitiativeSeat__c/fields/Initiative_Event__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Event__c</fullName>
    <label>Initiative Event</label>
    <referenceTo>InitiativeEvent__c</referenceTo>
    <relationshipLabel>Initiative Seats</relationshipLabel>
    <relationshipName>Initiative_Seats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>